A blocked user will not be able to use the app

--- a/Mifalot-app/src/app/pages/home/home.component.html
+++ b/Mifalot-app/src/app/pages/home/home.component.html
@@ -1,64 +1,49 @@
 
-  <!-- Page Content -->
-  <div *ngIf = "user.permission != 4 && user.permission != 5" class = "container" >
+<!-- ================================================================================================================================================ -->
+<!-- User wait for admin to confirm him OR user was blocked by admin -->
 
-    <div class = "row" >
+<app-user-status *ngIf = "user.permission == 4 || user.permission == 5" [permission] = "user.permission"></app-user-status>
 
-      <div class = "col-lg-12">
-        <div class = "page-header logo">
-          <img src = "https://firebasestorage.googleapis.com/v0/b/application-d2061.appspot.com/o/logo.jpg?alt=media&token=a0294e5b-4622-4971-8065-38330bc8b12b " />
-        </div>
+<!-- ================================================================================================================================================ -->
+
+<!-- Page Content -->
+<div *ngIf = "user.permission != 4 && user.permission != 5" class = "container" >
+
+  <div class = "row" >
+
+    <div class = "col-lg-12">
+      <div class = "page-header logo">
+        <img src = "https://firebasestorage.googleapis.com/v0/b/application-d2061.appspot.com/o/logo.jpg?alt=media&token=a0294e5b-4622-4971-8065-38330bc8b12b " />
       </div>
-
-      <!-- Coach's buttons -->
-      <div *ngIf = "user.permission == 3">
-        <div *ngFor = "let button of coachButtons" class = "col-lg-6 col-md-6 col-xs-6 thumb">    
-          <a class = "thumbnail" (click) = "navigate(button.id)"> 
-            <button type = "button" class = "btn {{ button.color }} btn-block" > <i class = "{{ button.icon }}" > </i> <br/> {{ button.txt }} </button>
-          </a>
-        </div>
-      </div>
-
-         <!-- Manager's buttons -->
-      <div *ngIf = "user.permission == 2">
-        <div *ngFor = "let button of managerButtons" class = "col-lg-12 col-md-12 col-xs-12 thumb">    
-          <a class = "thumbnail" (click) = "navigate(button.id)"> 
-            <button type = "button" class = "btn {{ button.color }} btn-block" > <i class = "{{ button.icon }}" > </i> <br/> {{ button.txt }} </button>
-          </a>
-        </div>
-      </div>
-
-        <!-- Admin's buttons -->
-          <div *ngIf = "user.permission == 1">
-            <div *ngFor = "let button of adminButtons" class = "col-lg-12 col-md-12 col-xs-12 thumb">
-              <a class = "thumbnail" (click) = "navigate(button.id)"> 
-                <button type = "button" class = "btn {{ button.color }} btn-block" > <i class = "{{ button.icon }}" > </i> <br/>  {{ button.txt }}</button> 
-              </a>
-          </div>
-        </div>
     </div>
-  </div>
 
-<!-- ================================================================================================================================================ -->
-<!-- User wait for admin to confirm him -->
-
-  <div *ngIf = "user.permission == 4" class = "container confirm" >
-      <div class = "panel panel-warning text-right center">
-        <div class = "panel-heading"> הינך ממתין לאישור מנהל <i class = "fa fa-exclamation-triangle fa-2x pull-left" aria-hidden = "true"></i> </div>
-        <div class = "panel-body"> זמנית, אינך יכול להשתמש באפליקציה עד אישורך ע״י מנהל. אנא נסה שנית מאוחר יותר </div>
+    <!-- Coach's buttons -->
+    <div *ngIf = "user.permission == 3">
+      <div *ngFor = "let button of coachButtons" class = "col-lg-6 col-md-6 col-xs-6 thumb">    
+        <a class = "thumbnail" (click) = "navigate(button.id)"> 
+          <button type = "button" class = "btn {{ button.color }} btn-block" > <i class = "{{ button.icon }}" > </i> <br/> {{ button.txt }} </button>
+        </a>
       </div>
+    </div>
 
-  </div>
-
-<!-- ================================================================================================================================================ -->
-<!-- User was blocked by admin -->
-
-  <div *ngIf = "user.permission == 5" class = "container confirm" >
-      <div class = "panel panel-danger text-right center">
-        <div class = "panel-heading"> משתמש זה נחסם <i class = "fa fa-ban fa-2x pull-left" aria-hidden = "true"></i> </div>
-        <div class = "panel-body"> שים לב, משתמש זה נחסם ע״י מנהל מפעלות </div>
+        <!-- Manager's buttons -->
+    <div *ngIf = "user.permission == 2">
+      <div *ngFor = "let button of managerButtons" class = "col-lg-12 col-md-12 col-xs-12 thumb">    
+        <a class = "thumbnail" (click) = "navigate(button.id)"> 
+          <button type = "button" class = "btn {{ button.color }} btn-block" > <i class = "{{ button.icon }}" > </i> <br/> {{ button.txt }} </button>
+        </a>
       </div>
+    </div>
 
+      <!-- Admin's buttons -->
+        <div *ngIf = "user.permission == 1">
+          <div *ngFor = "let button of adminButtons" class = "col-lg-12 col-md-12 col-xs-12 thumb">
+            <a class = "thumbnail" (click) = "navigate(button.id)"> 
+              <button type = "button" class = "btn {{ button.color }} btn-block" > <i class = "{{ button.icon }}" > </i> <br/>  {{ button.txt }}</button> 
+            </a>
+        </div>
+      </div>
   </div>
+</div>
 
 <!-- ================================================================================================================================================ -->
