--- a/Mifalot-app/src/app/pages/attendance/attendance.component.html
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.html
@@ -1,3 +1,11 @@
+<!-- ================================================================================================================================================ -->
+<!-- User wait for admin to confirm him OR user was blocked by admin -->
+
+<app-user-status *ngIf = "user.permission == 4 || user.permission == 5" [permission] = "user.permission"></app-user-status>
+
+<!-- ================================================================================================================================================ -->
+
+<div *ngIf = "user.permission != 4 && user.permission != 5">
 
 <!-- Page Header -->
 <app-page-header [item] = "header"> </app-page-header>
@@ -61,8 +69,8 @@
 </div>
 <!-- /Page content -->
 
-
-
+</div>
+<!-- /ngIf -->
 
 
 
