--- a/Mifalot-app/src/app/pages/registration/registration.component.html
+++ b/Mifalot-app/src/app/pages/registration/registration.component.html
@@ -22,7 +22,7 @@
       <!-- Name -->
       <label for = "name" class = "sr-only"> שם פרטי </label>
       <div class = "input-group">
-        <input #name type = "text" id = "name" class = "form-control" placeholder = "שם פרטי" required = "">
+        <input #name type = "text" id = "name" class = "form-control" placeholder = "שם פרטי" required = "" autofocus = "">
           <span class = "input-group-addon"><i class = "fa fa-user"></i></span> 
       </div>
 
@@ -49,7 +49,7 @@
       <!-- Email -->
       <label for = "email" class = "sr-only"> כתובת דוא״ל </label>
       <div class = "input-group">
-        <input #email type = "email" id = "email" class = "form-control" placeholder = "כתובת דוא״ל" required = "" autofocus = "">
+        <input #email type = "email" id = "email" class = "form-control" placeholder = "כתובת דוא״ל" required = "">
         <span class = "input-group-addon"><i class = "fa fa-envelope"></i></span> 
       </div>
 
