--- a/Mifalot-app/src/app/pages/home/home.component.css
+++ b/Mifalot-app/src/app/pages/home/home.component.css
@@ -26,3 +26,13 @@ button
     height: 120px;
     background-color: transparent;
 }
+
+.btn-primary
+{
+    background: #9669FE;
+}
+ 
+.btn-warning
+{
+    background: #FF8429;
+}
