messages header resize

--- a/Mifalot-app/src/app/pages/messages/messages.component.html
+++ b/Mifalot-app/src/app/pages/messages/messages.component.html
@@ -9,7 +9,7 @@
 
 <div *ngIf = "user.permission != 4 && user.permission !=5">
 
-  |<!-- Page header -->
+  <!-- Page header -->
   <app-page-header [item] = "header"> </app-page-header>
 
 
@@ -73,7 +73,7 @@
       <div class = "container">
         <div class = "row">
           <div class = "jumbotron text-center">
-            <h4 class = "direction-rtl blue text-bold"> {{ chatRoomTitle }} </h4>
+            <h5 class = "direction-rtl blue text-bold"> {{ chatRoomTitle }} </h5>
             <h6> {{ chatRoomAuthor }} </h6>
           </div>
         </div>
