--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -19,12 +19,12 @@
 
 	<div class = "row"> 
 		<div class = "col-xs-4 col-sm-4 col-md-4 col-lg-4">
-			<div *ngIf = "teamSelected" class = "dropdown">
-				<button class = "btn btn-primary btn-block dropdown-toggle" type = "button" data-toggle = "dropdown">
+			<div class = "dropdown">
+				<button (click) = "pressedOnChooseDate()" class = "btn btn-primary btn-block dropdown-toggle" type = "button" data-toggle = "dropdown">
 					<span class = "caret"></span>
 					<span> {{ chosenDateString }} </span>
 				</button>
-				<ul class = "dropdown-menu">
+				<ul *ngIf = "teamSelected" class = "dropdown-menu">
 					<li *ngFor = "let attendance of attendances | async">
 						<a (click) = "getPupils(attendance.date, attendance.presence)"> {{ attendance.date | date:'dd/MM/yy'}} </a>
 					</li>
