Adding the edit chat room name feature

--- a/Mifalot-app/src/app/pages/messages/messages.component.css
+++ b/Mifalot-app/src/app/pages/messages/messages.component.css
@@ -109,6 +109,12 @@ p
 {
   color: darkred;
 }
+
+.glyphicon-pencil
+{
+  color: darkslateblue;
+  margin-left: 10px;
+}
 input::placeholder
 {
   text-align: right;
