--- a/Mifalot-app/src/app/pages/messages/messages.component.html
+++ b/Mifalot-app/src/app/pages/messages/messages.component.html
@@ -35,7 +35,8 @@
                   <span class = "text-bold"> {{ chatRoom.name }} </span> <br> <span id = "author-name"> פותח: {{ chatRoom.authorName }} </span>
                   <span class = "fa fa-message"></span>
                   <span *ngIf = "user.uid == chatRoom.authorID" class = "pull-left">
-                      <span class = "glyphicon glyphicon-trash" (click) = "removeChatRoom(chatRoom)"></span>
+                    <span class = "glyphicon glyphicon-pencil" (click) = "editChatRoomName(chatRoom)"></span>
+                    <span class = "glyphicon glyphicon-trash" (click) = "removeChatRoom(chatRoom)"></span>
                   </span>
               </span>
           </div>
@@ -45,12 +46,36 @@
 
   <!-- /Selecting chat room or adding a new one -->
   <!-- ================================================================================================================================================ -->
+  <!-- Edit chat room name -->
+
+  <div *ngIf = "editChatRoom">
+    <h4 class = "create-chat text-center"> ערוך את נושא הצ׳אט ולחץ על <br> ״שמור שינויים״ </h4>
+
+    <br>
+
+    <form class = "form-signin" (submit) = "updateChatRoomName(name.value)">
+        <label for = "name" class = "sr-only"> נושא הצ׳אט </label>
+        <div class = "input-group">
+          <input #name type = "text" id = "name" class = "form-control" placeholder = "" [value] = "currentChatDetails.name" required>
+            <span class = "input-group-addon"><i class = "fa fa-pencil"></i></span> 
+        </div>
+
+        <br>
+
+        <button class = "btn btn-md btn-success btn-block" type = "submit"> שמור שינויים </button>
+        <button (click) = "chooseChatRoom()" class = "btn btn-md btn-primary btn-block" type = "button"> חזור לעמוד הקודם </button>
+
+    </form>
+  </div>
+
+  <!-- /Edit chat room name -->
+  <!-- ================================================================================================================================================ -->
   <!-- Create a new chat room -->
 
   <div *ngIf = "createNewChatRoom">
     <h4 class = "create-chat text-center"> אנא בחר את נושא הצ׳אט ולחץ על <br> ״יצירת צ׳אט״ </h4>
 
-  <br>
+    <br>
 
     <form class = "form-signin">
         <label for = "name" class = "sr-only"> נושא הצ׳אט </label>
@@ -71,7 +96,7 @@
   <!-- ================================================================================================================================================ -->
   <!-- Chat messages -->
 
-    <div *ngIf = "!noChatRoomSelected && !createNewChatRoom">
+    <div *ngIf = "!noChatRoomSelected && !createNewChatRoom && !editChatRoom">
 
       <div class = "container">
         <div class = "row">
