creating nav bar component

--- a/Mifalot-app/src/app/pages/home/home.component.html
+++ b/Mifalot-app/src/app/pages/home/home.component.html
@@ -1,3 +1,7 @@
+<!-- ================================================================================================================================================ -->
+<!-- Navbar -->
+
+<app-nav-header></app-nav-header>
 
 <!-- ================================================================================================================================================ -->
 <!-- User wait for admin to confirm him OR user was blocked by admin -->
