--- a/Mifalot-app/src/app/pages/users-management/users-management.component.html
+++ b/Mifalot-app/src/app/pages/users-management/users-management.component.html
@@ -1,3 +1,9 @@
+<!-- ================================================================================================================================================ -->
+<!-- Navbar -->
+
+<app-nav-header></app-nav-header>
+
+<!-- ================================================================================================================================================ -->
 
 <!-- Page header -->
 <app-page-header [item] = "header"> </app-page-header>
