--- a/Mifalot-app/src/app/pages/blocked-users/blocked-users.component.html
+++ b/Mifalot-app/src/app/pages/blocked-users/blocked-users.component.html
@@ -1,3 +1,8 @@
+<!-- ================================================================================================================================================ -->
+<!-- Navbar -->
+
+<app-nav-header></app-nav-header>
+<!-- ================================================================================================================================================ -->
 
 <!-- Page header -->
 <app-page-header [item] = "header"> </app-page-header>
