--- a/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
+++ b/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
@@ -1,3 +1,10 @@
+<!-- ================================================================================================================================================ -->
+<!-- Navbar -->
+
+<app-nav-header></app-nav-header>
+
+<!-- ================================================================================================================================================ -->
+
 <!-- Page header -->
 <app-page-header [item] = "header"> </app-page-header>
 
