--- a/Mifalot-app/src/app/pages/attendance/attendance.component.html
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.html
@@ -23,8 +23,8 @@
   <!-- Choose team -->
   <div *ngIf = "noTeamSelected" >
     <h4 class = "title text-center"> :בחר את הקבוצה אותה אתה מאמן </h4>
-    <div *ngFor = "let team of teams; let i = index" [attr.data-index]="i" class = "col-lg-12 col-md-12 col-xs-12 thumb">
-      <span class = "thumbnail" (click) = "getPupils(teams[i])"> 
+    <div *ngFor = "let team of teams | async"  class = "col-lg-12 col-md-12 col-xs-12 thumb">
+      <span *ngIf= "user.uid==team.coachID"  class = "thumbnail" (click) = "getPupils(team)"> 
         <button type = "button" class = "btn btn-default btn-block btn-team" > {{ teams[i] }} <i class = "fa fa-soccer-ball-o" > </i> </button>
       </span>
     </div>  
